k8s/echoserver/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: echoserver-route
  namespace: default
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: sts-gateway
    namespace: default
  hostnames:
  - "localhost"
  - "iam.internal.io"
  rules:
  # Echoserver on /echo path
  - matches:
    - path:
        type: PathPrefix
        value: /echo
    - path:
        type: PathPrefix
        value: /health
            
    backendRefs:
    - name: echoserver
      port: 80
